--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,28 +9,25 @@
         android:id="@+id/settingseditview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="110dp" />
 
-    <TextView
-        android:id="@+id/prefText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="155dp" />
+         />
 
     <Button
         android:id="@+id/prefButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/settingseditview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
         android:onClick="savePref"
-        android:text="@string/save"
-
-
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="341dp" />
+        android:text="@string/Save"
+        />
 
 
 
